Añade intérprete de la línea de comandos y separa las peticiones a la API

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 __pycache__
+# Fichero con los dato de la API
+config.yml
+# Ignoramos los directorios de las palabras tranformadas
+palabras
+nopalabras
