--- a/environment.yml
+++ b/environment.yml
@@ -53,20 +53,32 @@ dependencies:
   - sqlalchemy=1.4.49=py312h98912ed_1
   - text-unidecode=1.3=pyhd8ed1ab_1
   - tk=8.6.13=noxft_h4845f30_101
-  - tzdata=2024a=h8827d51_1
   - wheel=0.44.0=pyhd8ed1ab_0
   - xlrd=2.0.1=pyhd8ed1ab_3
   - xz=5.2.6=h166bdaf_0
   - pip:
       - certifi==2024.8.30
       - charset-normalizer==3.3.2
+      - editdistance==0.8.1
+      - epitran==1.26.0
       - idna==3.8
       - iniconfig==2.0.0
+      - jamo==0.4.1
+      - marisa-trie==1.2.1
+      - munkres==1.1.4
+      - numpy==2.3.2
       - packaging==24.1
+      - pandas==2.3.1
+      - panphon==0.22.2
       - pluggy==1.5.0
+      - pyphen==0.17.2
       - pytest==8.3.3
+      - python-dateutil==2.9.0.post0
       - pyyaml==6.0.2
+      - regex==2025.7.34
       - requests==2.32.3
       - ruff==0.6.4
+      - tzdata==2025.2
+      - unicodecsv==0.14.1
       - urllib3==2.2.2
-prefix: /home/cora/miniconda3/envs/proyecto
+prefix: /home/cora/.conda/envs/proyecto
