--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - agate-sql=0.7.2=pyhd8ed1ab_0
   - babel=2.14.0=pyhd8ed1ab_0
   - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2024.8.30=hbcca054_0
+  - ca-certificates=2025.7.15=h06a4308_0
   - cffi=1.17.1=py312h06ac9bb_0
   - cld2-cffi=0.1.4=py312h30efb56_1005
   - csvkit=2.0.1=pyhd8ed1ab_0
@@ -53,6 +53,7 @@ dependencies:
   - sqlalchemy=1.4.49=py312h98912ed_1
   - text-unidecode=1.3=pyhd8ed1ab_1
   - tk=8.6.13=noxft_h4845f30_101
+  - uv=0.8.11=heb9285d_0
   - wheel=0.44.0=pyhd8ed1ab_0
   - xlrd=2.0.1=pyhd8ed1ab_3
   - xz=5.2.6=h166bdaf_0
@@ -71,13 +72,13 @@ dependencies:
       - pandas==2.3.1
       - panphon==0.22.2
       - pluggy==1.5.0
-      - pyphen==0.17.2
       - pytest==8.3.3
       - python-dateutil==2.9.0.post0
       - pyyaml==6.0.2
       - regex==2025.7.34
       - requests==2.32.3
       - ruff==0.6.4
+      - silabeador==1.2.1
       - tzdata==2025.2
       - unicodecsv==0.14.1
       - urllib3==2.2.2
