--- a/windows-env.yml
+++ b/windows-env.yml
@@ -35,6 +35,7 @@ dependencies:
   - sqlalchemy=1.4.49
   - text-unidecode=1.3
   - tk=8.6.13
+  - uv=0.8.11
   - wheel=0.44.0
   - xlrd=2.0.1
   - xz=5.2.6
@@ -53,13 +54,13 @@ dependencies:
       - pandas==2.3.1
       - panphon==0.22.2
       - pluggy==1.5.0
-      - pyphen==0.17.2
       - pytest==8.3.3
       - python-dateutil==2.9.0.post0
       - pyyaml==6.0.2
       - regex==2025.7.34
       - requests==2.32.3
       - ruff==0.6.4
+      - silabeador==1.2.1
       - tzdata==2025.2
       - unicodecsv==0.14.1
       - urllib3==2.2.2
