--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,128 @@
-PyYAML==6.0.2
-requests==2.32.3
-silabeador==1.2.1
+absl-py==2.3.1
+agate-excel==0.2.3
+argbind==0.3.9
+asttokens==3.0.0
+audioread==3.0.1
+certifi==2024.8.30
+charset-normalizer==3.3.2
+cld2-cffi==0.1.4
+click==8.2.1
+contourpy==1.3.3
+cycler==0.12.1
+dbfread==2.0.7
+decorator==5.2.1
+descript-audio-codec==1.0.0
+descript-audiotools @ git+https://github.com/descriptinc/audiotools@348ebf2034ce24e2a91a553e3171cb00c0c71678
+docstring_parser==0.17.0
+editdistance==0.8.1
+einops==0.8.1
 epitran==1.26.0
+executing==2.2.0
+ffmpy==0.6.1
+filelock==3.19.1
+fire==0.7.1
+flatten-dict==0.4.2
+fonttools==4.59.1
+fsspec==2025.7.0
+grpcio==1.74.0
+hf-xet==1.1.8
+huggingface-hub==0.34.4
+idna==3.8
+importlib_resources==6.5.2
+iniconfig==2.0.0
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jamo==0.4.1
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.1
+julius==0.2.7
+kiwisolver==1.4.9
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.44.0
+marisa-trie==1.2.1
+Markdown==3.8.2
+markdown-it-py==4.0.0
+markdown2==2.5.4
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mpmath==1.3.0
+msgpack==1.1.1
+munkres==1.1.4
+networkx==3.5
+numba==0.61.2
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+packaging==24.1
+pandas==2.3.1
+panphon==0.22.2
+parler_tts @ git+https://github.com/huggingface/parler-tts.git@d108732cd57788ec86bc857d99a6cabd66663d68
+parsedatetime==2.4
+parso==0.8.5
+pexpect==4.9.0
+pillow==11.3.0
+platformdirs==4.3.8
+pluggy==1.5.0
+pooch==1.8.2
+prompt_toolkit==3.0.51
+protobuf==4.25.8
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.2
+pyloudnorm==0.1.1
+pyparsing==3.2.3
+pystoi==0.4.1
+pytest==8.3.3
+python-dateutil==2.9.0.post0
+pytimeparse==1.1.8
+PyYAML==6.0.2
+randomname==0.2.1
+regex==2025.7.34
+requests==2.32.3
+rich==14.1.0
+ruff==0.6.4
+safetensors==0.6.2
+scikit-learn==1.7.1
+scipy==1.16.1
+sentencepiece==0.2.1
+setuptools==73.0.1
+silabeador==1.2.1
+soundfile==0.13.1
+soxr==0.5.0.post1
+stack-data==0.6.3
+sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+termcolor==3.1.0
+threadpoolctl==3.6.0
+tokenizers==0.20.3
+torch==2.8.0
+torch-stoi==0.2.3
+torchaudio==2.8.0
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.46.1
+triton==3.4.0
+typing_extensions==4.14.1
+tzdata==2025.2
+unicodecsv==0.14.1
+urllib3==2.2.2
+wcwidth==0.2.13
+Werkzeug==3.1.3
+wheel==0.44.0
