--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
 local-models = [
   "torch>=2.0.0",
   "transformers>=4.30.0",
-  "parler-tts>=0.1.0"
+  "parler-tts>=0.1.0",
   "llvmlite>=0.42.0",    # Versión compatible con Python 3.12
   "numba>=0.58.0"        # Versión compatible con Python 3.12
 
