--- a/environment.yml
+++ b/environment.yml
@@ -59,43 +59,77 @@ dependencies:
   - xz=5.2.6=h166bdaf_0
   - pip:
       - absl-py==2.3.1
+      - accelerate==1.10.1
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.12.15
+      - aiosignal==1.4.0
+      - antlr4-python3-runtime==4.9.3
       - argbind==0.3.9
+      - asteroid-filterbanks==0.4.0
       - asttokens==3.0.0
+      - attrs==25.3.0
       - audioread==3.0.1
+      - bleach==6.2.0
+      - cdpam==0.0.6
       - certifi==2024.8.30
       - charset-normalizer==3.3.2
+      - ci-sdr==0.0.2
       - click==8.2.1
+      - coloredlogs==15.0.1
       - contourpy==1.3.3
       - cycler==0.12.1
+      - cython==3.1.3
+      - datasets==4.0.0
       - decorator==5.2.1
       - descript-audio-codec==1.0.0
       - descript-audiotools==0.7.4
+      - dill==0.3.8
+      - discrete-speech-metrics==1.0.1
+      - distance==0.1.3
       - docstring-parser==0.17.0
       - editdistance==0.8.1
       - einops==0.8.1
       - epitran==1.26.0
+      - espnet==202503
+      - espnet-model-zoo==0.1.7
+      - espnet-tts-frontend==0.0.3
       - executing==2.2.0
+      - fast-bss-eval==0.1.4
+      - fastdtw==0.3.4
       - ffmpy==0.6.1
       - filelock==3.19.1
       - fire==0.7.1
+      - flatbuffers==25.2.10
       - flatten-dict==0.4.2
       - fonttools==4.59.1
-      - fsspec==2025.7.0
+      - frozenlist==1.7.0
+      - fsspec==2025.3.0
+      - g2p-en==2.1.0
       - grpcio==1.74.0
+      - h5py==3.14.0
       - hf-xet==1.1.8
       - huggingface-hub==0.34.4
+      - humanfriendly==10.0
+      - hydra-core==1.3.2
       - idna==3.8
+      - importlib-metadata==8.7.0
       - importlib-resources==6.5.2
+      - inflect==7.5.0
       - iniconfig==2.0.0
       - ipython==9.4.0
       - ipython-pygments-lexers==1.1.1
+      - jaconv==0.4.0
       - jamo==0.4.1
       - jedi==0.19.2
+      - jellyfish==1.2.0
       - jinja2==3.1.6
       - joblib==1.5.1
       - julius==0.2.7
+      - kaggle==1.7.4.5
+      - kaldiio==2.18.1
       - kiwisolver==1.4.9
       - lazy-loader==0.4
+      - levenshtein==0.27.1
       - librosa==0.11.0
       - llvmlite==0.44.0
       - marisa-trie==1.2.1
@@ -106,10 +140,15 @@ dependencies:
       - matplotlib==3.10.5
       - matplotlib-inline==0.1.7
       - mdurl==0.1.2
+      - mir-eval==0.8.2
+      - more-itertools==10.7.0
       - mpmath==1.3.0
       - msgpack==1.1.1
+      - multidict==6.6.4
+      - multiprocess==0.70.16
       - munkres==1.1.4
       - networkx==3.5
+      - nltk==3.9.1
       - numba==0.61.2
       - numpy==2.2.6
       - nvidia-cublas-cu12==12.8.4.1
@@ -126,32 +165,46 @@ dependencies:
       - nvidia-nccl-cu12==2.27.3
       - nvidia-nvjitlink-cu12==12.8.93
       - nvidia-nvtx-cu12==12.8.90
+      - omegaconf==2.3.0
+      - onnxruntime==1.22.1
+      - openai-whisper==20250625
+      - opt-einsum==3.4.0
       - packaging==24.1
       - pandas==2.3.1
       - panphon==0.22.2
       - parler-tts==0.2.2
       - parso==0.8.5
+      - pesq==0.0.4
       - pexpect==4.9.0
       - pillow==11.3.0
       - platformdirs==4.3.8
       - pluggy==1.5.0
       - pooch==1.8.2
       - prompt-toolkit==3.0.51
+      - propcache==0.3.2
       - protobuf==4.25.8
+      - psutil==7.0.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
+      - pyarrow==21.0.0
       - pygments==2.19.2
       - pyloudnorm==0.1.1
       - pyparsing==3.2.3
+      - pypinyin==0.55.0
+      - pysptk==1.0.1
       - pystoi==0.4.1
       - pytest==8.3.3
       - python-dateutil==2.9.0.post0
+      - pyworld==0.3.5
       - pyyaml==6.0.2
       - randomname==0.2.1
+      - rapidfuzz==3.14.0
       - regex==2025.7.34
       - requests==2.32.3
+      - resampy==0.4.3
       - rich==14.1.0
       - ruff==0.6.4
+      - s3prl==0.4.17
       - safetensors==0.6.2
       - scikit-learn==1.7.1
       - scipy==1.16.1
@@ -159,24 +212,35 @@ dependencies:
       - silabeador==1.2.1
       - soundfile==0.13.1
       - soxr==0.5.0.post1
+      - speechmos==0.0.1.1
       - stack-data==0.6.3
       - sympy==1.14.0
       - tensorboard==2.20.0
       - tensorboard-data-server==0.7.2
       - termcolor==3.1.0
       - threadpoolctl==3.6.0
+      - tiktoken==0.11.0
       - tokenizers==0.20.3
       - torch==2.8.0
+      - torch-complex==0.4.4
       - torch-stoi==0.2.3
       - torchaudio==2.8.0
+      - torchlibrosa==0.1.0
       - tqdm==4.67.1
       - traitlets==5.14.3
       - transformers==4.46.1
       - triton==3.4.0
+      - typeguard==4.4.4
       - typing-extensions==4.14.1
       - tzdata==2025.2
       - unicodecsv==0.14.1
+      - unidecode==1.4.0
       - urllib3==2.2.2
+      - versa-speech-audio-toolkit==1.0.0
       - wcwidth==0.2.13
+      - webencodings==0.5.1
       - werkzeug==3.1.3
+      - xxhash==3.5.0
+      - yarl==1.20.1
+      - zipp==3.23.0
 prefix: /home/cora/.conda/envs/proyecto
